@@ -4,6 +4,11 @@ Changes
 1.3.0 (TBD)
 -----------
 
+Bug fixes:
+
+- Allow DatasetReader and DatasetWriter to take string filenames and URLs
+  (#2426).
+
 1.3a3 (2022-02-04)
 ------------------
 
